uipath-commons/main/default/objects/ROW_Country__mdt/ROW_Country__mdt.object-meta.xml
<CustomObject>
    <label>ROW Country</label>
    <pluralLabel>ROW Countries</pluralLabel>
</CustomObject>