uipath-commons/main/default/objects/ROW_Country__mdt/fields/Area__c.field-meta.xml
<CustomField>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>