uipath-commons/main/default/objects/ROW_Country__mdt/fields/Country__c.field-meta.xml
<CustomField>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>