uipath-commons/main/default/objects/ROW_Country__mdt/fields/Country_Code__c.field-meta.xml
<CustomField>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>5</length>
        <type>Text</type>
    </CustomField>